--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,20 +5,26 @@
 @layer base {
   :root,
   html[data-theme="light"] {
-    --color-fill: 251, 254, 251;
+    --color-fill: 255, 255, 255;
     --color-text-base: 40, 39, 40;
     --color-accent: 0, 108, 172;
     --color-card: 230, 230, 230;
     --color-card-muted: 205, 205, 205;
     --color-border: 236, 233, 233;
+    /* Custom header color */
+    --color-header-bg: 24, 37, 102; /* #182566 */
+    --color-header-text: 255, 255, 255; /* #FFFFFF */
   }
   html[data-theme="dark"] {
-    --color-fill: 33, 39, 55;
-    --color-text-base: 234, 237, 243;
-    --color-accent: 255, 107, 1;
-    --color-card: 52, 63, 96;
-    --color-card-muted: 138, 51, 2;
-    --color-border: 171, 75, 8;
+    --color-fill: 255, 255, 255;
+    --color-text-base: 40, 39, 40;
+    --color-accent: 0, 108, 172;
+    --color-card: 230, 230, 230;
+    --color-card-muted: 205, 205, 205;
+    --color-border: 236, 233, 233;
+    /* Custom header color */
+    --color-header-bg: 24, 37, 102; /* #182566 */
+    --color-header-text: 255, 255, 255; /* #FFFFFF */
   }
   #sun-svg,
   html[data-theme="dark"] #moon-svg {
