--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -57,8 +57,8 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="/tags/" class={activeNav === "tags" ? "active" : ""}>
-              Tags
+            <a href="/categories/" class={activeNav === "categories" ? "active" : ""}>
+              Categories
             </a>
           </li>
           <li>
