--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -57,7 +57,7 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="/categories/" class={activeNav === "categories" ? "active" : ""}>
+            <a href="/tags/" class={activeNav === "categories" ? "active" : ""}>
               Categories
             </a>
           </li>
