--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,13 +24,16 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <main id="main-content">
     <section id="hero" class="hero-container mt-8">
       <div class="flex items-center justify-between flex-wrap gap-4">
+        
+        <!-- Logo -->
         <h1 class="!my-0">
           <img 
-            src="https://i.imgur.com/r5nCUdx.png" 
-            alt="JourKnows Logo" 
-            class="h-12 w-auto sm:h-16 object-contain"
+            src="https://i.imgur.com/05jWZfM.jpeg" 
+            alt="JourKnows" 
+            class="h-16 w-16 sm:h-20 sm:w-20 object-cover rounded-3xl border-[3px] border-white bg-white shadow-lg block"
           />
         </h1>
+
         <a
           target="_blank"
           href="/rss.xml"
